--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Pakemon</title>
   </head>
   <body>
+    <select id="select"></select>
     <ul class="list"></ul>
   </body>
   <script src="./js/data.js"></script>
