--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <title>Pakemon</title>
   </head>
   <body>
-    <select id="select"></select>
+    <!-- <label>Types</label> -->
+    <select id="select">
+      <!-- <option selected>All</option> -->
+    </select>
+    <input class="input" type="text" placeholder="search" />
     <ul class="list"></ul>
   </body>
   <script src="./js/data.js"></script>
